<resources>
    <string name="app_name">HungerGames</string>
    <string name="channel_name">HungerGames</string>
    <string name="channel_description">Poop</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Student!</string>
    <string name="slide_1_desc">The easiest way to distribute left-over food and get free food on campus!</string>

    <string name="slide_2_title">Hunger Warning</string>
    <string name="slide_2_desc">Hunger Games is not liable for the quality of the food presented by the event organizers!</string>

    <string name="slide_3_title">Attention Hungry Students</string>
    <string name="slide_3_desc">Hunger Games is not responsible for the reliability of the event posted</string>

    <string name="slide_4_title">Great Convenience</string>
    <string name="slide_4_desc">Find your way to the nearest free food location!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings for login page -->
    <string name="logo_desc">The apps logo</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="login">Login</string>
    <string name="create_account">No account yet? Create one</string>

    <!-- Strings and arrays for create_event.xml -->

    <string name="quantity_prompt">Choose a quantity</string>
    <string-array name="quantity">
        <item>Quantity</item>
        <item>1-4</item>
        <item>5-10</item>
        <item>11-20</item>
        <item>20+</item>
    </string-array>

    <string name="close_y">Yes</string>
    <string name="close_n">No</string>
    <string name="close_text">Event closing option</string>

    <string name="category_prompt">Choose a category</string>
    <string-array name="category">
        <item>Category</item>
        <item>Pizza</item>
        <item>Burgers</item>
        <item>Sandwiches</item>
        <item>Chinese</item>
        <item>Noodles</item>
        <item>Thai</item>
        <item>Japanese</item>
        <item>Ice Cream</item>
        <item>Desserts</item>
        <item>Sushi</item>
        <item>Coffee</item>
        <item>Cookies</item>
        <item>Other</item>
    </string-array>

    <string name="content_description">Picture of the food</string>
    <string name="event_name">Event Name</string>
    <string name="room">Unit/Room</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="question_desc">Information about close event option</string>
        
    <string name="str_rb_normal">Normal</string>


</resources>
